0029599: Data Exchange - Incorrect expand compound method in XDE

Improve processing of subshapes in ShapeTool
Fix sharing and calculating location for subshapes
Switch off autonaming for expand